--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -20,6 +20,8 @@
     border-radius: 5px;
     border: 2px solid rgb(197, 197, 197);
     width: 100%;
+    background-color: white;
+    color: black;
 }
 
 .input-box:focus {
@@ -33,6 +35,10 @@
     background-color: rgb(116, 218, 218);
     font-size: 1rem;
     cursor: pointer;
+}
+
+#dont-account {
+    color: black;
 }
 
 @media (max-width: 1200px) {
