--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -199,6 +199,7 @@ input[type="date"]::placeholder {
     font-size: 1.5rem;
     text-align: center;
     padding: 1rem;
+    color: black;
 }
 
 @keyframes blink {
