--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,20 +5,20 @@
     --input-text-color: black;
     --button-background-color: rgb(116, 218, 218);
     --button-text-color: black;
-    --button-hover-background-color: #c9d42b;
-    --button-hover-text-color: black;
+    --button-hover-background-color: black;
+    --button-hover-text-color: rgb(116, 218, 218);
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --background-color: #333;
+        --background-color: #121212;
         --text-color: #f4f4f4;
-        --input-background-color: #555;
+        --input-background-color: #444444;
         --input-text-color: #f4f4f4;
-        --button-background-color: #444;
-        --button-text-color: #f4f4f4;
-        --button-hover-background-color: #666;
-        --button-hover-text-color: #f4f4f4;
+        --button-background-color: rgb(116, 218, 218);
+        --button-text-color: black;
+        --button-hover-background-color: black;
+        --button-hover-text-color: rgb(116, 218, 218);
     }
 }
 
