--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --btn-bg: #444;
+        --btn-bg: #c9d42b;
         --btn-border: #555;
         --text-color: #f4f4f4;
         --logo-color: #fff;
@@ -115,9 +115,9 @@
 
 #menu-toggle {
     display: none;
-    /* position: fixed;
+    position: fixed;
     top: 23px;
-    right: 10px; */
+    right: 10px;
     font-size: 1.8rem;
     background: none;
     border: none;
@@ -129,7 +129,6 @@
 
 .general-navbar {
     width: 100%;
-    /* background-color: #c9d42b; */
     display: flex;
     justify-content: space-between;
     align-items: center;
