Improve TodoList component performance and code structure: - Added useCallback to memoize fetchTodoList function for better performance - Replaced localStorage token retrieval with state management for efficiency - Consolidated multiple useState hooks into a single useState object for related state values

--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -71,6 +71,22 @@ input[type="date"]::placeholder {
     color: var(--input-text-color);
 }
 
+input[type="date"]::-webkit-input-placeholder {
+    color: var(--input-text-color);
+}
+
+input[type="date"]::-moz-placeholder {
+    color: var(--input-text-color);
+}
+
+input[type="date"]::placeholder {
+    color: var(--input-text-color);
+}
+
+input[type="date"]:-ms-input-placeholder {
+    color: var(--input-text-color);
+}
+
 #task {
     width: calc(50% - 1rem);
 }
