--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -50,7 +50,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    justify-content: center;
+    justify-content: space-between;
     margin-bottom: 1rem;
 }
 
@@ -65,26 +65,6 @@
 
 .todo-input-box:focus {
     outline: 0;
-}
-
-input[type="date"]::placeholder {
-    color: var(--input-text-color);
-}
-
-input[type="date"]::-webkit-input-placeholder {
-    color: var(--input-text-color);
-}
-
-input[type="date"]::-moz-placeholder {
-    color: var(--input-text-color);
-}
-
-input[type="date"]::placeholder {
-    color: var(--input-text-color);
-}
-
-input[type="date"]:-ms-input-placeholder {
-    color: var(--input-text-color);
 }
 
 #task {
@@ -333,7 +313,7 @@ input[type="date"]:-ms-input-placeholder {
     .email-note {
         width: 100%; 
     }
-
+    
     #task, #status, #deadline {
         width: 100%;
     }
