--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -28,7 +28,7 @@
     padding: 5px;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     gap: 5px;
 }
 
@@ -86,7 +86,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
+    width: 100%;
 }
 
 #todo-app-logo {
@@ -105,7 +106,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
+    width: 100%;
 }
 
 #display-name {
